# xxx

./: .gitignore  .replit  CNAME  DEPLOY_TO_RENDER.md  Modelfile  README.md  SETUP_GITHUB.md  ai_analyzer.py  app.py  cli.py  darkweb_crawler.py  dependencies.txt  ollama.txt  pyproject.toml  render.yaml  requirements.txt  selenium_crawler.py  tor_manager.py  utils.py  web_api.py
app/: __init__.py  routes.py
app/static/: styles.css
app/templates/: check_designer.html  custom_tool_generator.html  dashboard.html  help.html  index.html  interactive_tools.html  onion_generator.html  results.html  security_tools.html  tool_details.html  uncensored_chat.html
attached_assets/: Modelfile  Pasted-Downloading-jiter-0-9-0-cp311-cp311-manylinux-2-17-x86-64-manylinux2014-x86-64-whl-351-kB--1746596808086.txt  Pasted-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-endfor-Traceback-most-recent-c-1746610510455.txt  run.py
ollama/: package-lock.json
security_tools/: __init__.py  api.py  bot_maker.py  core.py  email_templates.py  location_changer.py  manager.py  vuln_scanner.py
security_tools/tools/: __init__.py  all_tools.py  anonymity.py  crypto_analyzer.py  custom_generator.py  forensic.py  hardware_tools.py  info_gathering.py  onion_generator.py  password_tools.py  web_attack.py
