[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "bip32utils>=0.3.post4",
    "exifread>=3.3.0",
    "flask>=3.1.0",
    "hashid>=3.1.4",
    "mnemonic>=0.21",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "opencv-python>=4.11.0.86",
    "passlib>=1.7.4",
    "pdfkit>=1.0.0",
    "pillow>=11.2.1",
    "pycryptodome>=3.22.0",
    "requests>=2.32.3",
    "scapy>=2.6.1",
    "selenium>=4.32.0",
    "stegano>=0.9.7",
    "stem>=1.8.2",
    "trafilatura>=2.0.0",
    "web3>=7.11.0",
    "wkhtmltopdf>=0.2",
]
